k8s/reactapp-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactapp
  template:
    metadata:
      labels:
        app: reactapp
    spec:
      containers:
        - name: reactapp
          image: reactapp
          imagePullPolicy: Never
