k8s/reactapp-service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactapp-service
spec:
  selector:
    app: reactapp
  ports:
    - name: reactapp
      protocol: TCP
      port: 5173
      targetPort: 5173
