k8s/ingress-service-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: reactapp.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: reactapp-service
                port:
                  number: 5173
